# solaredge

./: main.py  pyproject.toml
solaredge/: __init__.py  battery.py  device.py  exc.py  inverter.py  meter.py  register.py
tests/: test_device.py  test_inverter.py  test_meter.py  test_register.py  test_solaredge.py
